--- a/Symbaroum/symbaroum.scss
+++ b/Symbaroum/symbaroum.scss
@@ -3,6 +3,10 @@
 ============================= */
     @import 'src/scss/_colors'; 
 
+// REPEATING SECTIONS
+//=============================
+    @import 'src/scss/_repcontrol';
+
 /* SWITCHES
 ============================= */
     @import 'src/scss/_globals'; 
@@ -23,15 +27,21 @@
 ============================= */ 
 	.sheet-border-bottom { border-bottom: 0.15em solid $maincolor; }
 	.sheet-center { text-align: center; }
+	.sheet-background-color {background-color: rgba(1,1,1,0.71);}
+	.sheet-dashed {
+		border: 3px dashed rgba(1,1,1,0.71);
+	}
 
  /* PC
 ============================= */ 
 	div.sheet-pc {
-		grid-template-columns: 1fr 1fr;
-		grid-column-gap: 0.1%;
-		grid-row-gap: 5%;
-		width: 100%;
 		background-color: rgba(1, 1, 1, 0.71);
+		grid-column-gap: 0.1%;
+		grid-row-gap: 1%;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto;
+		padding-bottom: 10%;
+		width: 100%;
 
 	     /* CHARACTER INFO
 	    ----------------------------- */
@@ -39,6 +49,14 @@
 			grid-template-columns: 22em 2fr 3fr 2fr 1fr 1fr;
 			grid-area: 1 / 1 / 1 / 3;
 
+
+			label {
+				grid-row: 1;
+			}
+
+			span {
+				grid-row: 2;
+			}
 		}
 
 	     /* CHARACTER QUOTE
@@ -75,9 +93,7 @@
 
 		/* CHARACTER SHAOOW
 	    ----------------------------- */
-	    div.sheet-character-shadow {
-	    	grid-column: 2 / 3;
-	    }
+	    div.sheet-character-shadow { grid-column: 2 / 3; }
 
 	   /* TABS
 	    ----------------------------- */
@@ -95,40 +111,268 @@
 	        }
 	    }
 
+	   	/* TOUGHNESS & CORRUPTION SHARED STYLES
+	    ----------------------------- */
+	    div.sheet-tough-corr-row {
+	    	margin: 0px 5%;
+
+	    	label { grid-row: 2;  }
+	    	span { grid-row: 3; }
+	    }
+
 	   	/* TOUGHNESS
 	    ----------------------------- */
 	    div.sheet-toughness {
 	    	grid-column: 1 / 2;
 	    	grid-template-columns: 1fr 1fr 1fr;
-	    	margin-right: 2%;
 
 	    	h1 { grid-area: 1 / 1 / 1 / 4; }
-	    	label { grid-row: 2;  }
-	    	span { grid-row: 3; }
 	    }
 
 	   	/* CORRUPTION
 	    ----------------------------- */
 	    div.sheet-corruption {
 	    	grid-column: 2 / 3;
-	    	grid-template-columns: 5em 4em 1fr 1fr;
-	    	margin-left: 2%;
+	    	grid-template-columns: 5em 1fr 1fr 1fr;
 
-	    	button {
+	    	button[type="roll"] {
 	    		grid-row: 2;
 	    		background-image:url(http://i.imgur.com/MC61Qmt.png?1);
 	    		background-position: center;
 	    		height: 1.5em;
+
+	    		 &:before {
+	                display: none;
+	            }
 	    	}
 
 	    	h1 { grid-area: 1 / 1 / 1 / 5; }
 	    	select { grid-row: 3; }
-	    	label { grid-row: 2;  }
-	    	span { grid-row: 3; }
+	    }
+
+	   	/* ATTRIBUTES
+	    ----------------------------- */
+	    div.sheet-attributes {
+	    	grid-column: 1 / 3;
+	    	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	    
+	    	input[type="number"] {
+				background: $accent1;
+				border-radius: 3em;
+				border: 3px solid $maincolor;
+				color: $dark;
+				font-size: 1.5em;
+				height: 3em;
+				text-align: center;
+				width: 3em;
+	    		grid-row: 1;
+	    		margin-left: 15%;
+	    		padding: 0 .5em;
+	    	}
+
+	    	button {
+	    		background: rgba(16, 32, 48, 0.78);
+	    		grid-row: 2;
+	    		height:1.5em;
+	    		overflow: hidden;
+	    		text-align:center;
+	    		font-size: 1.3em;
+	    		border-bottom: 2px solid $accent2;
+	    		border-right: 2px solid $accent2;
+	    		color: $accent1;
+	    		text-shadow: 1px 1px 2px $maincolor, 0 0 25px $accent2, 0 0 5px $accent2;
+
+	    		&:before {
+	                display: none;
+	            }
+
+	    		span {
+	    			box-shadow: 3px 3px 2px $gray inset, -3px -3px 1px $accent2 inset;
+	    			padding: .5em 0;
+	    		}
+	    	}
+	    }
+
+	   	/* ATTACKS & DEFENSE SHARED STYLES
+	    ----------------------------- */
+	    div.sheet-attacks,
+	    div.sheet-defense  {
+	    	grid-column: 1 / 3;
+
+	    	button[type="roll"] {
+	    		background-position:center;
+	    		background-repeat:no-repeat;
+	    		height:100%;
+	    		width:100%;
+
+	    		 &:before {
+	                display: none;
+	            }
+	    	}
+
+	    	div.sheet-section-header {
+		   		h1 {
+		   			grid-row: 1;
+		   		}
+
+		   		h2 {
+		   			grid-row: 1;
+		   			border-top-left-radius: 3em;
+		   			border-top-right-radius: 3em;
+		   		}
+
+		   		h3 {
+		   			grid-row: 3;
+		   		}
+		   	}
+	    }
+
+	   	/* ATTACKS
+	    ----------------------------- */
+	    div.sheet-attacks {
+	    	h1 {
+	   			grid-column: 1 / 6;
+	   		}
+
+	   		h2 {
+	   			grid-column: 6 / 9;
+	   		}
+
+	    	button[type="roll"] {
+	    		background-image:url(http://i.imgur.com/EPH4536.png);
+	    	}
+
+	   		div.sheet-section-header,
+	   		div.sheet-section-body {
+	   			grid-template-columns: 2.5em 15em 8em 5em 1fr 5em 5em 5em;
+	   			width: 100%;
+	   		}
+	    }
+
+	    /* DEFENSE
+	    ----------------------------- */
+	    div.sheet-defense {
+	    	h1 {
+	   			grid-column: 1 / 7;
+	   		}
+
+	   		h2 {
+	   			grid-column: 7 / 10;
+	   		}
+
+	    	button[type="roll"] {
+	    		background-image:url(http://i.imgur.com/QFy0qCe.png?);
+	    	}
+
+	    	div.sheet-section-header,
+	   		div.sheet-section-body {
+	   			grid-template-columns: 2.5em 15em 4em 8em 5em 1fr 4em 5em 5em;
+	   			width: 100%;
+	   		}
+	    }
+
+	   	/* TRAITS & ABILITIES
+	    ----------------------------- */
+	    div.sheet-section-pc2 {
+	    	grid-column: 1 / 3;
+
+	    	div.sheet-left-side,
+	    	div.sheet-right-side {
+	    		display: inline-block;
+	    		vertical-align: top;
+	    		width: 48%;
+	    	}
+
+	    	div.sheet-left-side {
+	    		margin-right: 2%;
+	    	}
+	    }
+
+	    div.sheet-traits, 
+	    div.sheet-abilities {
+	    	margin: 0px 5%;
+	    	grid-template-rows: min-content;
+	    	width: 100%;
+
+	    	button[type=roll] {
+	    		color: $dark;
+
+	    		&:before {
+	    			display: block;
+	    		}
+	    	}
+
+	    	h1 { grid-area: 1 / 1 / 1 / 4; }
+	    	label.sheet-long { grid-column: 2 / 7; }
+	    	select[name*="attribute"] { grid-column: 1 / 3; }
+	    	input[type="text"][name*="type"] { grid-column: 3 / 5; }
+	    	textarea { grid-column: 1 / 7; }
+
+	    	div.sheet-section-body {
+	    		margin-bottom: 2%;
+	    	}
+
+	    	div.sheet-section-header {
+	    		max-height: 2.5em;
+	    	}
+	    }
+
+	    div.sheet-traits, 
+	    div.sheet-abilities {
+	    	div.sheet-section-header,
+	    	div.sheet-section-body {
+	    		grid-template-columns: 2.5em 1fr 1fr 1fr 1fr 1fr;
+	    		width: 98%;
+	    	}
+	    }	  
+
+	    div.sheet-boon, 
+	    div.sheet-burdens {
+	    	margin: 0px 5%;
+	    	grid-template-rows: min-content;
+	    	width: 100%;
+	    	div.sheet-section-header,
+	    	div.sheet-section-body {
+	    		grid-template-columns: 1fr 1fr 1fr 1fr;
+
+	    		label:nth-of-type(1) {
+	    			grid-row: 1;
+	    			grid-column: 1 / 5;
+	    		}
+	    	}
+
+	    	textarea { grid-column: 1 / 5; }
+	    }
+
+	   	/* TRAITS
+	    ----------------------------- */
+	    div.sheet-traits,
+	    div.sheet-boon {
+	    	grid-column: 1 / 2;
+	    }
+
+	   	/* ABILITIES
+	    ----------------------------- */
+	    div.sheet-abilities,
+	    div.sheet-burdens {
+	    	grid-column: 2 / 3;
+
+	    }
+
+	    div.sheet-section-pc3,
+	    div.sheet-section-pc4 {
+	    	grid-column: 1 / 3;
+	    }
+
+	    div.sheet-section-pc3 {
+	    	select {
+	    		width: 15%;
+	    	}
 	    }
 	}
 
-
+ /* OLD CSS
+============================= */ 
 /*** Background ***/
 .sheet-col-small {
 	text-align: center;
@@ -163,23 +407,7 @@
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
   color:    #fafafa;
 }
-:placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
-  color:    #fafafa;
-  background-color: rgba(0,0,0,.3);
-}
 /*** Pages ***/
-div[class^="sheet-section"] {
-	visibility: hidden;
-	opacity: 0;
-	max-height:0;
-	overflow: hidden;
-}
-input.sheet-tab99:checked ~ div[class^="sheet-section"] {
-	max-height: 999998px;
-	opacity: 1;
-	transition: opacity 0.25s linear 0s;
-	overflow: auto;
-}
 .sheet-row div[class^="repcontrol"]{
     padding:1em;   
 }
@@ -221,29 +449,27 @@ input.sheet-tab:checked::before {
 	color:blue;
 }
 /* Next section makes a page visible when the tab is clicked */
-input.sheet-tab[value="1"] ~ div.sheet-section-pc1,
-input.sheet-tab[value="2"] ~ div.sheet-section-pc2,
-input.sheet-tab[value="3"] ~ div.sheet-section-pc3,
-input.sheet-tab[value="4"] ~ div.sheet-section-pc4 {
-	max-height: 999999px;
-    max-width:850px;
-	visibility: visible;
-	min-height:1000px;
-	opacity: 1;
-	transition: opacity .25s linear 0s;
-	overflow: hidden;
-	border-radius: 0 0 5px 5px;
+div.sheet-section-pc1,
+div.sheet-section-pc2,
+div.sheet-section-pc3,
+div.sheet-section-pc4 {
+	display: none;
 }
+
+input.sheet-tab[value="1"] ~ div.sheet-pc div.sheet-section-pc1 {
+	display: inline-grid;
+}
+
+input.sheet-tab[value="1"] ~ div.sheet-pc div.sheet-section-pc2,
+input.sheet-tab[value="2"] ~ div.sheet-pc div.sheet-section-pc2,
+input.sheet-tab[value="3"] ~ div.sheet-pc div.sheet-section-pc3,
+input.sheet-tab[value="4"] ~ div.sheet-pc div.sheet-section-pc4   {
+	display: inline-block;
+}
+
 input.sheet-tab:checked + span.sheet-tab {
 	box-shadow: -2px -2px 5px #FAFAFA inset, 2px 2px 5px #202020 inset;
 	opacity: 1;
-}
-/*** Input ***/
-.sheet-number-circle::-webkit-inner-spin-button, 
-.sheet-number-circle::-webkit-outer-spin-button { 
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	margin: 0; 
 }
 label { 
     margin: 0;
@@ -253,24 +479,6 @@ label {
 	font-weight: normal;
 	color: #D8D8D8 ;
 }
-select {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	width:auto;
-	height:2em;
-	display: inline-block;
-	text-overflow: '';
-	background: #FBFCFC;
-	border-radius:6px;
-	border: 3px solid #004040;
-	padding:0;
-	margin: 0;
-	text-align: center;
-	line-height:1em;
-}
-select > option {
-	text-align:center;
-}
 input[type=radio]{
 	margin:0 5px 0 5px;   
 }
@@ -278,22 +486,7 @@ input[type=number] {
 	-moz-appearance: textfield;
 }
 
-input[type="number"].sheet-number-circle{
-    -moz-appearance: textfield;
-    text-indent: 0.01px;
-    text-overflow: '';
-	font-size:1.25em;
-	border: 3px solid #004040;
-	padding:0 .5em 0 .5em;
-	width:2.33em;
-	height:2.33em;
-	text-align: center;
-	vertical-align:center;
-	border-radius:3em;
-	color: #000000;
-	background: #FBFCFC;
-}
-input[type="number"].sheet-number-box-small{
+input[type="number"].sheet-number-box-small {
 	border: 3px solid #004040;
 	padding:0 0 0 3px;
 	width:3.1em;
@@ -307,19 +500,6 @@ input[type="number"].sheet-number-box-small{
 	height:25px; 
 	border: 2px solid #004040;
     border-radius: 6px;
-}
-
-input[type="number"]:disabled{
-	background: #aaaaaa;
-}
-input[type="text"]{
-	height:2em;
-	border: 3px solid #004040;
-	text-align: left;
-/*	background: #FBFCFC; */
-	border-radius:6px;
-	font-size: 13px;
-	font-style:bold;
 }
 input[type="checkbox"] {
 	border: 3px solid #004040;
@@ -600,7 +780,7 @@ button {
 .charsheet {
     background-color:#000303 ;
     background-image:url("http://i.imgur.com/XOomnMY.jpg?1");
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
 	background-position: 0px 33px; 
 	text-shadow: 1px 1px 2px #000101, -1px -1px 2px #000101,1px -1px 2px #000101, -1px 1px 2px #000101,
 		1px 1px 12px #000101, -1px -1px 12px #000101,1px -1px 12px #000101, -1px 1px 12px #000101;
@@ -662,31 +842,6 @@ button {
     padding-bottom:5px;
 	font-size:16px;
 	width:10.5%;
-}
-.sheet-attributes label{
-    padding:.5em 0 .5em 0;
-    background:rgba(16,32,48,.4);
-    width:100%;
-	text-align:center;
-	margin-bottom: 10px;   
-	margin-bottom: -2em;
-    box-shadow: 3px 3px 2px #aaaaaa inset,-3px -3px 1px #103030 inset;
-    /*box-shadow: none|h-shadow v-shadow blur spread color |inset|initial|inherit;*/
-}
-.sheet-attributes span {
-	font-size:.75em;
-	position:relative; 
-	top:-2em; 
-	left:2em;
-}
-.sheet-attributes button{
-	text-align:center;
-	overflow: hidden;
-	margin:0;
-	width:90%;
-	height:1.5em;
-	opacity:0;
-	z-index:9999;
 }
 .charsheet * {
     box-sizing: border-box;
