--- a/Symbaroum/symbaroum.pug
+++ b/Symbaroum/symbaroum.pug
@@ -1,5 +1,9 @@
-//- Old HTML TABS
-include src/pug/oldtabs.html
+
+//- OBJECTS
+include src/pug/_objects.pug
+
+//- MIXINS
+include src/pug/_mixins.pug
 
 input.tab(name="attr_page-number" type="hidden" value="1")
 
@@ -9,22 +13,22 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 	.grid.character-info
 		label(data-i18n-title="name" title="name")
 			input(name="attr_character-name" type="text")
-			span(data-i18n="name") Name
+		span(data-i18n="name") Name
 		label(data-i18n-title="race" title="race")
 			input(name="attr_character-race" type="text")
-			span(data-i18n="race") race
+		span(data-i18n="race") race
 		label(data-i18n-title="occupation" title="occupation")
 			input(name="attr_character-occupation" type="text")
-			span(data-i18n="occupation") occupation
+		span(data-i18n="occupation") occupation
 		label(data-i18n-title="player" title="player")
 			input(name="attr_player-name" type="text")
-			span(data-i18n="player") player
+		span(data-i18n="player") player
 		label(data-i18n-title="experience-abbrv" title="exp")
 			input(name="attr_character-exp" type="number")
-			span(data-i18n="experience-abbrv") exp
+		span(data-i18n="experience-abbrv") exp
 		label(data-i18n-title="unspent" title="unspent")
 			input(name="attr_character-expu" type="number")
-			span(data-i18n="unspent") unspent
+		span(data-i18n="unspent") unspent
 	.grid.character-quote
 		span.quote &ldquo;
 		label(data-i18n-title="quote" title="quote")
@@ -48,7 +52,7 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 		// EQUIPMENT & BIO TAB
 		input.tab(data-i18n-title="title-equipment-group-and-friends" name="attr_page-number" title="Equipment, Group, and Friends" type="radio" value="4")
 		span.tab(data-i18n="equipment-and-biography") Equipment | Bio
-	.grid.toughness.section-pc1
+	.grid.toughness.tough-corr-row.section-pc1
 		h1.center(data-i18n="toughness") Toughness
 		label.center(data-i18n-title="current toughness input" title="current toughness input")
 			input.center(name="attr_toughness" title="@{toughness}" type="number" value="@{strong}")
@@ -59,15 +63,11 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 		label.center(data-i18n-title="pain threshold display" title="pain threshold display")
 			input.center(name="attr_pain_threshold" title="@{pain_threshold}" type="number" value="ceil(@{strong}/2)" disabled="true")
 		span.center(data-i18n="pain-threshold-abbrv") Pain thresh.
-	.grid.corruption.section-pc1
+	.grid.corruption.tough-corr-row.section-pc1
 		h1.center(data-i18n="corruption") Corruption
 		button(data-i18n-title="title-choose-dice-and-roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" type="roll" value="/roll @{corruption-d} for Corruption...")
 		select(name="attr_corruption-d")
-			option(value="d4") d4
-			option(value="d6") d6
-			option(value="d8") d8
-			option(value="d10") d10
-			option(value="d12") d12
+			+diceSelect("d4")
 		label.center(ata-i18n-title="corruption input" title="corruption input")
 			input.center(name="attr_corruption" min="0" title="@{corruption}" type="number" value="0")
 		span.center(data-i18n="temporary-abbrv") Temp.
@@ -75,12 +75,91 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 			input.center(name="attr_corruption_permanent" min="0" title="@{corruption_permanent}" type="number"  value="0")
 		span.center(data-i18n="permanent-abbrv") Perm.
 		label.center(ata-i18n-title="corruption threshold" title="corruption threshold")
-			input(name="attr_corruption_threshold" title="@{corruption_threshold}" type="number"  value="ceil(@{resolute}/2)" disabled="true")
+			input.center(name="attr_corruption_threshold" title="@{corruption_threshold}" type="number"  value="ceil(@{resolute}/2)" disabled="true")
 		span.center(data-i18n="threshold") Threshold
+	.grid.attributes.section-pc1
+		each val in attributeObject
+			- const attrName = val.toLowerCase();
+			input(name='attr_' + attrName  max="15" min="5" type="number" value="10")
+			button(data-i18n=attrName name='roll_' + val + 'Check' type='roll' value='&{template:attrib}{{name=^{' + attrName + '}}} {{character=@{character-name}}} {{attribute=[[@{' + attrName + '}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}')
+				span=val
+		input(type="number" class="sheet-number-circle" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total")
+		button(data-i18n-title="title-button-does-nothing" title="What, you thought this button did something? It doesn't." type='roll') 
+			span(data-i18n="total") Total
+	.grid.attacks.section-pc1
+		.grid.section-header
+			h1(data-i18n="attacks") Attacks
+			h2.center.background-color(data-i18n="bonuses-and-advantages") Bonuses/Disadvantages
+			h3.center(data-i18n="roll") Roll
+			h3(data-i18n="weapon-or-power") Weapon or Power
+			each val in ["Attribute", "Damage", "Quality"]
+				- const h3Name = val.toLowerCase();
+				h3.center(data-i18n=h3Name)=val
+			each val in ["Damage", "Roll", "Attack"]
+				- const h3Name = val.toLowerCase();
+				h3.center.background-color(data-i18n=h3Name)=val
+		.grid.section-body
+			+weapon()
+		fieldset.repeating_weapons
+			.grid.section-body
+				+weapon()
+	.grid.defense.section-pc1
+		.grid.section-header
+			h1(data-i18n="defenses") Defenses
+			h2.center.background-color(data-i18n="bonuses-and-advantages") Bonuses/Disadvantages
+			h3.center(data-i18n="roll") Roll
+			h3(data-i18n="armor-or-power") Armor or Power
+			each val in ["Impede", "Attribute", "Negation", "Quality"]
+				- const h3Name = val.toLowerCase();
+				h3.center(data-i18n=h3Name)=val
+			each val in ["Damage", "Roll", "Defense"]
+				- const h3Name = val.toLowerCase();
+				h3.center.background-color(data-i18n=h3Name)=val
+		.grid.section-body
+			+defense()
+		fieldset.repeating_armor
+			.grid.section-body
+				+defense()
+
+	.section-pc2
+		.left-side
+			.grid.traits
+				.grid.section-header
+					h1(data-i18n="traits") Traits
+				.grid.section-body
+					+traitAbil("trait")
+				fieldset.repeating_trait
+					.grid.section-body
+						+traitAbil("trait")
+			.grid.boon
+				.grid.section-header
+					h1(data-i18n="boons") boons
+				.grid.section-body
+					+boonBurden("boon")
+				fieldset.repeating_boon
+					.grid.section-body
+						+boonBurden("boon")
+			.grid.burdens
+				.grid.section-header
+					h1(data-i18n="burdens") Burdens
+				.grid.section-body
+					+boonBurden("burden")
+				fieldset.repeating_burdens
+					.grid.section-body
+						+boonBurden("burden")
+		.right-side
+			.grid.abilities
+				.grid.section-header
+					h1(data-i18n="abilities") Abilities
+				.grid.section-body
+					+traitAbil("ability")
+				fieldset.repeating_abilities
+					.grid.section-body
+						+traitAbil("ability")
 
 
+	//- Old HTML BODY
+	include src/pug/oldsymbaroum.html
 
-
-
-//- Old HTML BODY
-include src/pug/oldsymbaroum.html
+//- Old HTML TABS
+include src/pug/oldtabs.html
