--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -606,7 +606,7 @@ input.sheet-tab0 + span {
     line-height: 22px;
 
     margin: 0;
-    padding: 0;
+    padding: 0 0 1px 0;
 
     text-align: center;
     display: inline-block;
@@ -614,6 +614,11 @@ input.sheet-tab0 + span {
 
     font-size: 18px;
     font-family: "Pictos";
+    
+    border: 1px solid #dcdcdc;
+    border-radius: 6px;
+    background: #faf7fa;
+    
 }
 
 .sheet-box .sheet-boolean ~ .sheet-checkbox:before {
@@ -1710,6 +1715,10 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     background: #B7FFAA;    
 }
 
+/* -- Bold Carried Items -- */
+input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-total {
+    font-weight: bold;
+}
 
 /* Text Area Box Styling */
 .sheet-quick-inventory .sheet-header .sheet-col0 {
