add bullets, food, grub section

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -548,7 +548,7 @@ div.sheet-character-armor {
 }
 
 div.sheet-character-gear {
-  grid-row-start: 3;
+  grid-row-start: 4;
   grid-column-start: 1;
 }
 
@@ -1206,6 +1206,28 @@ div.sheet-repeating-skill-grid span {
 .sheet-armor-box8 {
   grid-row-start: 4;
   grid-column: 1/6;
+}
+
+/* ---------------------------------- NECESSITIES */
+div.sheet-character-necessities {
+
+}
+
+.sheet-nec-grid  div.sheet-header {
+  grid-column: 1 / 4;
+}
+
+.sheet-nec-grid {
+  display              : grid;
+  grid-column-gap      : 1%;
+  grid-row-gap         : 0.1em;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows   : auto;
+}
+
+.sheet-nec-grid img {
+  filter: invert(80%);
+  width: 35%;
 }
 
 /* ---------------------------------- Gear */
@@ -2780,7 +2802,8 @@ div.sheet-gear-box1,
 div.sheet-gear-box6,
 span.sheet-armor-box4,
 div.sheet-notes-box-header,
-div.sheet-ark-notes h1[data-i18n="notes"]  {
+div.sheet-ark-notes h1[data-i18n="notes"],
+div.sheet-nec-grid div.sheet-header  {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Mutant%20Year%20Zero/images/header13.jpg");
 }
