--- a/Symbaroum/src/pug/_mixins.pug
+++ b/Symbaroum/src/pug/_mixins.pug
@@ -51,7 +51,7 @@ mixin weapon()
 		select(data-i18n-title="title-extra-damage-roll" name="attr_weapon1-extra-dtype" title="Extra damage roll due to an ability")
 			+diceSelect("0")
 	label.dashed(data-i18n-title="attack" title="attack")
-		input.center(data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number")
+		input.center(data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number" value="0")
 
 //- DEFENSE
 mixin defense()
