--- a/Symbaroum/symbaroum.pug
+++ b/Symbaroum/symbaroum.pug
@@ -39,6 +39,14 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 		label(data-i18n-title="shadow" title="shadow")
 			input(name="attr_character-shadow" type="text")
 			span(data-i18n="shadow") shadow
+	.grid.attributes
+		each val in attributeObject
+			- const attrName = val.toLowerCase();
+			input(name='attr_' + attrName  max="15" min="5" type="number" value="10")
+			button(data-i18n=attrName name='roll_' + val + 'Check' type='roll' value='&{template:attrib}{{name=^{' + attrName + '}}} {{character=@{character-name}}} {{attribute=[[@{' + attrName + '}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}')
+				span=val
+		input(type="number" class="sheet-number-circle" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total")
+		span(data-i18n="total") Total
 	.grid.tabs
 		// CHARACTER TAB
 		input.tab(data-i18n-title="title-character-sheet" name="attr_page-number" title="Character Sheet" type="radio" value="1" checked)
@@ -77,14 +85,6 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 		label.center(ata-i18n-title="corruption threshold" title="corruption threshold")
 			input.center(name="attr_corruption_threshold" title="@{corruption_threshold}" type="number"  value="ceil(@{resolute}/2)" disabled="true")
 		span.center(data-i18n="threshold") Threshold
-	.grid.attributes.section-pc1
-		each val in attributeObject
-			- const attrName = val.toLowerCase();
-			input(name='attr_' + attrName  max="15" min="5" type="number" value="10")
-			button(data-i18n=attrName name='roll_' + val + 'Check' type='roll' value='&{template:attrib}{{name=^{' + attrName + '}}} {{character=@{character-name}}} {{attribute=[[@{' + attrName + '}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}')
-				span=val
-		input(type="number" class="sheet-number-circle" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total")
-		span(data-i18n="total") Total
 	.grid.attacks.section-pc1
 		.grid.section-header
 			h1(data-i18n="attacks") Attacks
@@ -159,6 +159,9 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 
 	//- Old HTML BODY
 	include src/pug/oldsymbaroum.html
+	include src/pug/oldpage4.html
+	include src/pug/oldrolltemplate.html
+	include src/pug/oldscripts.html
 
 //- Old HTML TABS
 include src/pug/oldtabs.html
