--- a/Symbaroum/symbaroum.scss
+++ b/Symbaroum/symbaroum.scss
@@ -114,7 +114,7 @@
 	   	/* TOUGHNESS & CORRUPTION SHARED STYLES
 	    ----------------------------- */
 	    div.sheet-tough-corr-row {
-	    	margin: 0px 5%;
+	    	margin: 0px 20%;
 
 	    	label { grid-row: 2;  }
 	    	span { grid-row: 3; }
@@ -155,6 +155,7 @@
 	    div.sheet-attributes {
 	    	grid-column: 1 / 3;
 	    	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	    	margin-bottom: 2%;
 	    
 	    	input[type="number"] {
 				background: $accent1;
