--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -56,12 +56,28 @@ button {
     padding-bottom: 0px;
     padding-left: 5px;
     padding-right: 5px;
-    height: 1.5em;
-    font-size: 1em;
+    height: 1.5rem;
+    font-size: 1rem;
+    vertical-align: middle;
 }
 button[type=roll].sheet-d100::before {
     font-family: 'dicefontd10';
     font-size: 175%;
+    vertical-align: text-bottom;
+}
+button[type=roll].sheet-d12::before {
+    font-family: 'dicefontd12';
+    content: "l";
+    font-size: 150%;
+    vertical-align: middle;
+}
+span.sheet-d12-font {
+    font-family: 'dicefontd12';
+    font-size: 150%;
+    vertical-align: middle;
+}
+span.sheet-font-pictos {
+    font-family: 'Pictos';
 }
 button[type=roll].sheet-info-btn::before {
     font-family: 'pictos custom';
@@ -76,6 +92,7 @@ button[type=roll].sheet-reduced-size {
     padding: 0px;
     height: 1.5em;
     font-size: .92em;
+    vertical-align: middle;
 }
 button[type=action].sheet-reduced-size {
     margin-top: 0px;
@@ -85,12 +102,14 @@ button[type=action].sheet-reduced-size {
     padding: 0px;
     height: 1.5em;
     font-size: .92em;
+    vertical-align: middle;
 }
 
 button[type=roll].sheet-no-dice {
     padding-left: 2px;
     padding-right: 2px;
     height: 16px;
+    vertical-align: middle;
 }
 
 button[type=roll].sheet-memorized {
@@ -640,7 +659,6 @@ input.sheet-type-toggle-solar-system:not(:checked) ~ div.sheet-type-solar-system
     display: none;
 }
 
-
 /* Battle Unit Styles */
 div.sheet-unit-label {
     display: inline-block;
@@ -1170,7 +1188,7 @@ div.sheet-social-attribute-row {
 }
 div.sheet-social-attribute-label {
     display: inline-block;
-    width: 50%;
+    width: 49%;
 }
 div.sheet-social-attribute-number {
     display: inline-block;
@@ -1230,7 +1248,7 @@ div.sheet-armor-notes {
 
 /* Weapons */
 input.sheet-reach-enabled-toggle:not(:checked) ~ div .sheet-weapon-effects {
-    width: 53.75%;
+    width: 52.75%;
 }
 input.sheet-reach-enabled-toggle:not(:checked) ~ div .sheet-weapon-effects-core {
     width: 55.5%;
@@ -1326,7 +1344,7 @@ div.sheet-npc-weapon-size {
 div.sheet-weapon-reach {
     display: inline-block;
     text-align: center;
-    width: 5.5%;
+    width: 8.5%;
 }
 div.sheet-npc-weapon-reach {
     display: inline-block;
@@ -1385,7 +1403,7 @@ div.sheet-npc-weapon-ammo {
 div.sheet-weapon-load {
     display: inline-block;
     text-align: center;
-    width: 5%;
+    width: 6%;
 }
 
 div.sheet-npc-weapon-load {
@@ -1418,23 +1436,23 @@ div.sheet-weapon-hp {
 div.sheet-weapon-effects {
     display: inline-block;
     text-align: center;
-    width: 47.75%;
+    width: 44.75%;
 }
 div.sheet-weapon-effects-core {
     display: inline-block;
     text-align: center;
-    width: 49.5%;
+    width: 46.5%;
 }
 
 div.sheet-weapon-ranged-effects {
     display: inline-block;
     text-align: center;
-    width: 22.5%;
+    width: 21.5%;
 }
 div.sheet-weapon-ranged-effects-core {
     display: inline-block;
     text-align: center;
-    width: 24.25%;
+    width: 23.25%;
 }
 
 div.sheet-weapon-firearm-traits {
@@ -2371,6 +2389,12 @@ div.sheet-mythras-vehicle-weapons {
     margin-bottom: 5px;
 }
 
+/* Footer Styles */
+div.sheet-infomsg {
+    border: 1px black solid;
+    background: #d9edf7;
+}
+
 /* Roll Templates */
 /* Default Roll Template Styles */
 .sheet-rolltemplate-default div.sheet-header {
@@ -2467,6 +2491,84 @@ div.sheet-mythras-vehicle-weapons {
     background: white;
 }
 
+/* Hit Location Roll Template Styles */
+.sheet-rolltemplate-hit-location {
+    border: 1px black solid;
+}
+
+.sheet-rolltemplate-hit-location div.sheet-header {
+    width: 100%;
+    border: 1px black solid;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 110%;
+}
+.sheet-rolltemplate-hit-location div.sheet-subheader {
+    width: 100%;
+    border: 1px black solid;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 75%;
+}
+.sheet-rolltemplate-hit-location .sheet-bold {
+    font-weight: bold;
+}
+.sheet-rolltemplate-hit-location div.sheet-table {
+    display: table;
+    background: white;
+    color: black;
+    width: 100%;
+}
+.sheet-rolltemplate-hit-location div.sheet-table-header {
+    display: table-row;
+    background: dimgray;
+    color: lightgray;
+}
+.sheet-rolltemplate-hit-location div.sheet-table-row {
+    display: table-row;
+}
+.sheet-rolltemplate-hit-location div.sheet-table-row:nth-child(odd) {
+    background: linear-gradient(to right, gainsboro, white);
+}
+.sheet-rolltemplate-hit-location div.sheet-table-cell {
+    display: table-cell;
+    text-align: center;
+
+}
+.sheet-rolltemplate-hit-location span.sheet-font-pictos {
+    font-family: 'Pictos';
+}
+
+.sheet-rolltemplate-hit-location .inlinerollresult  {
+    display: inline-block;
+    text-align: center;
+    padding: 0px;
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-hit-location .inlinerollresult.fullcrit {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-hit-location .inlinerollresult.fullfail {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-hit-location .inlinerollresult.importantroll {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+
 /* Magic Roll Template Styles */
 .sheet-rolltemplate-magic div.sheet-header {
     width: 100%;
@@ -2515,6 +2617,81 @@ div.sheet-mythras-vehicle-weapons {
 .sheet-rolltemplate-magic .inlinerollresult.importantroll {
     border: 1px solid black;
     background: #BEBEBE;
+}
+
+/* Social Hit Roll Template Styles */
+.sheet-rolltemplate-resolution-pool {
+    border: 1px black solid;
+}
+
+.sheet-rolltemplate-resolution-pool div.sheet-header {
+    width: 100%;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 110%;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-subheader {
+    width: 100%;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 75%;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-content {
+    border: 1px black solid;
+    padding: 2px;
+    background: white;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-table {
+    display: table;
+    background: white;
+    color: black;
+    width: 100%;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-table-header {
+    display: table-row;
+    background: dimgray;
+    color: lightgray;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-table-row {
+    display: table-row;
+}
+.sheet-rolltemplate-resolution-pool div.sheet-table-row:nth-child(odd) {
+    background: linear-gradient(to right, gainsboro, white);
+}
+.sheet-rolltemplate-resolution-pool div.sheet-table-cell {
+    display: table-cell;
+    text-align: center;
+
+}
+
+.sheet-rolltemplate-resolution-pool .inlinerollresult  {
+    display: inline-block;
+    text-align: center;
+    padding: 0px;
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-resolution-pool .inlinerollresult.fullcrit {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-resolution-pool .inlinerollresult.fullfail {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-resolution-pool .inlinerollresult.importantroll {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
 }
 
 /* Skill Roll Template Styles */
@@ -2575,6 +2752,88 @@ div.sheet-mythras-vehicle-weapons {
 .sheet-rolltemplate-skill .inlinerollresult.importantroll {
     border: 1px solid black;
     background: #BEBEBE;
+}
+
+/* System Location Roll Template Styles */
+.sheet-rolltemplate-system {
+    border: 1px black solid;
+}
+
+.sheet-rolltemplate-system div.sheet-header {
+    width: 100%;
+    border: 1px black solid;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 110%;
+}
+.sheet-rolltemplate-system div.sheet-subheader {
+    width: 100%;
+    border: 1px black solid;
+    text-align: center;
+    color: lightgray;
+    background: black;
+    font-size: 75%;
+}
+.sheet-rolltemplate-system div.sheet-table {
+    display: table;
+    background: white;
+    color: black;
+    width: 100%;
+}
+.sheet-rolltemplate-system div.sheet-table-header {
+    display: table-row;
+    background: dimgray;
+    color: lightgray;
+}
+.sheet-rolltemplate-system div.sheet-table-row {
+    display: table-row;
+}
+.sheet-rolltemplate-system div.sheet-table-row:nth-child(odd) {
+    background: linear-gradient(to right, gainsboro, white);
+}
+.sheet-rolltemplate-system div.sheet-table-cell {
+    display: table-cell;
+    text-align: center;
+
+}
+.sheet-rolltemplate-system span.sheet-font-pictos {
+    font-family: 'Pictos';
+}
+.sheet-rolltemplate-system span.sheet-rollvalue .inlinerollresult  {
+    display: inline-block;
+    padding: 0px;
+    border: 1px solid black;
+    background: #BEBEBE;
+    color: black;
+    min-width: 1.5em;
+}
+.sheet-rolltemplate-system .inlinerollresult  {
+    display: inline-block;
+    text-align: center;
+    padding: 0px;
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-system .inlinerollresult.fullcrit {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-system .inlinerollresult.fullfail {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
+}
+.sheet-rolltemplate-system .inlinerollresult.importantroll {
+    border: none;
+    color: inherit;
+    background: inherit;
+    font-weight: inherit;
 }
 
 /* Weapon Roll Template Styles */
