--- a/Mythras/src/Mythras.css
+++ b/Mythras/src/Mythras.css
@@ -8,7 +8,6 @@ ${new File("src/sheet/generic/recalc_button.css").getText()}
 /* Campaign Settings Styles */
 ${new File("src/sheet/generic/campaign_settings.css").getText()}
 
-
 /* Battle Unit Styles */
 ${new File("src/sheet/types/battle_unit.css").getText()}
 
@@ -31,13 +30,22 @@ ${new File("src/sheet/types/vehicle/m-space.css").getText()}
 /* Mythras Vehicle Styles */
 ${new File("src/sheet/types/vehicle/mythras.css").getText()}
 
+/* Footer Styles */
+${new File("src/sheet/generic/footer.css").getText()}
+
 /* Roll Templates */
 ${new File("src/roll_templates/default.css").getText()}
 
 ${new File("src/roll_templates/effect.css").getText()}
 
+${new File("src/roll_templates/hit_location.css").getText()}
+
 ${new File("src/roll_templates/magic.css").getText()}
 
+${new File("src/roll_templates/resolution_pool.css").getText()}
+
 ${new File("src/roll_templates/skill.css").getText()}
+
+${new File("src/roll_templates/system.css").getText()}
 
 ${new File("src/roll_templates/weapon.css").getText()}
