--- a/Mythras/src/sheet/generic/generic.css
+++ b/Mythras/src/sheet/generic/generic.css
@@ -54,12 +54,28 @@ button {
     padding-bottom: 0px;
     padding-left: 5px;
     padding-right: 5px;
-    height: 1.5em;
-    font-size: 1em;
+    height: 1.5rem;
+    font-size: 1rem;
+    vertical-align: middle;
 }
 button[type=roll].sheet-d100::before {
     font-family: 'dicefontd10';
     font-size: 175%;
+    vertical-align: text-bottom;
+}
+button[type=roll].sheet-d12::before {
+    font-family: 'dicefontd12';
+    content: "l";
+    font-size: 150%;
+    vertical-align: middle;
+}
+span.sheet-d12-font {
+    font-family: 'dicefontd12';
+    font-size: 150%;
+    vertical-align: middle;
+}
+span.sheet-font-pictos {
+    font-family: 'Pictos';
 }
 button[type=roll].sheet-info-btn::before {
     font-family: 'pictos custom';
@@ -74,6 +90,7 @@ button[type=roll].sheet-reduced-size {
     padding: 0px;
     height: 1.5em;
     font-size: .92em;
+    vertical-align: middle;
 }
 button[type=action].sheet-reduced-size {
     margin-top: 0px;
@@ -83,12 +100,14 @@ button[type=action].sheet-reduced-size {
     padding: 0px;
     height: 1.5em;
     font-size: .92em;
+    vertical-align: middle;
 }
 
 button[type=roll].sheet-no-dice {
     padding-left: 2px;
     padding-right: 2px;
     height: 16px;
+    vertical-align: middle;
 }
 
 button[type=roll].sheet-memorized {
