--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -37,11 +37,11 @@
     display: inline-block;
     
     background: #fff;
-    background: -moz-linear-gradient(to top, #D3D3D3	, #fff, #D3D3D3	);
-    background: -webkit-linear-gradient(to top, #D3D3D3	8, #fff, #D3D3D3 );
-    background: -ms-linear-gradient(to top, #D3D3D3	, #fff, #D3D3D3	);
-    background: -o-linear-gradient(to top, #D3D3D3	, #fff, #D3D3D3	);
-    background: linear-gradient(to top, #D3D3D3	, #fff, #D3D3D3	);
+    background: -moz-linear-gradient(to top, #D3D3D3    , #fff, #D3D3D3 );
+    background: -webkit-linear-gradient(to top, #D3D3D3 8, #fff, #D3D3D3 );
+    background: -ms-linear-gradient(to top, #D3D3D3 , #fff, #D3D3D3 );
+    background: -o-linear-gradient(to top, #D3D3D3  , #fff, #D3D3D3 );
+    background: linear-gradient(to top, #D3D3D3 , #fff, #D3D3D3 );
     
     width: 100px;
     height: 20px;
@@ -54,24 +54,24 @@
 
 .sheet-tab:checked + span::before{
     background: #dcdcdc;
-    background: -moz-linear-gradient(to top, #D3D3D3	, #dcdcdc, #D3D3D3	);
-    background: -webkit-linear-gradient(to top, #D3D3D3	, #dcdcdc, #D3D3D3	);
+    background: -moz-linear-gradient(to top, #D3D3D3    , #dcdcdc, #D3D3D3  );
+    background: -webkit-linear-gradient(to top, #D3D3D3 , #dcdcdc, #D3D3D3  );
     background: -ms-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: -o-linear-gradient(to top, #D3D3D3	, #dcdcdc, #D3D3D3	);
-    background: linear-gradient(to top, #D3D3D3	, #dcdcdc, #D3D3D3	);
+    background: -o-linear-gradient(to top, #D3D3D3  , #dcdcdc, #D3D3D3  );
+    background: linear-gradient(to top, #D3D3D3 , #dcdcdc, #D3D3D3  );
     border-bottom-color: #fff;
 }
 .sheet-tab2 + span::before{
-  	left: 130px;
+    left: 130px;
 }
 .sheet-tab3 + span::before{
     left: 231px;
 }
 .sheet-tab4 + span::before{
-	left: 332px;
+    left: 332px;
 }
 .sheet-tab5 + span::before{
-	left: 433px;
+    left: 433px;
 }
 .sheet-tab6 + span::before{
     left: 534px;
@@ -200,14 +200,15 @@ button[type=roll].sheet-rolldice::before {
     text-decoration:underline;
 }
 .sheet-name-stats, .sheet-class-stats, .sheet-occ-stats, .sheet-exp-stats, .sheet-minmax, 
-.sheet-calc-field, .sheet-roll-field, .sheet-caster-field, .sheet-physical-field, 
+.sheet-calc-field, .sheet-roll-field, .sheet-caster-field, .sheet-physical-field, .sheet-counter,
 .sheet-origin-field, .sheet-mental-field, .sheet-leaping-field, .sheet-movement-field, 
 .sheet-mattack-field, .sheet-damage-dice, .sheet-mattack-notes, .sheet-rattack-field,
 .sheet-rattack-notes, .sheet-weapon-field, .sheet-weapon-textarea, .sheet-armor-field, 
 .sheet-armor-textarea, .sheet-gear-field, .sheet-inventory-textarea, .sheet-consumable-field, 
 .sheet-wealth-field, .sheet-bonus-field, .sheet-occ-field, .sheet-skill-notes, .sheet-elective-field, 
 .sheet-secondary-field, .sheet-mystic-field, .sheet-melee-field, .sheet-ranged-field, 
-.sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea{
+.sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea, 
+.sheet-weight-box, .sheet-weightsub-box{
     background-color:#ebebeb;
 }
 .sheet-fraction-grid-container{
@@ -248,17 +249,20 @@ button[type=roll].sheet-rolldice::before {
 }
 .sheet-melee-attack-panel{
     border-bottom:5px solid #889987;
-    max-width:744px;
+    max-width:745px;
 }
 .sheet-mattack-grid-container{
     display:grid;
-    grid-template-columns: 210px 33px 50px 50px 35px 50px 50px 35px 60px 50px 120px
+    grid-template-columns: 160px 35px 50px 48px 35px 50px 50px 35px 62px 50px 170px
 }
 button[type=roll].sheet-meleedice::before {
     content: ''; 
 }
 button[type=roll].sheet-rangeddice::before {
     content: ''; 
+}
+.sheet-mattack-label, .sheet-rattack-label{
+    width: 160px;
 }
 .sheet-meleedice, .sheet-rangeddice{
     background:#3d5a48;
@@ -268,14 +272,14 @@ button[type=roll].sheet-rangeddice::before {
     width: 60px;
 }
 .sheet-mattack-notes{
-    width:120px;
+    width:170px;
 }
 .sheet-ranged-attack-panel{
-    max-width:744px;
+    max-width:745px;
 }
 .sheet-rattack-grid-container{
     display:grid;
-    grid-template-columns: 210px 35px 50px 50px 35px 60px 50px 50px 50px 153px
+    grid-template-columns: 160px 35px 50px 48px 35px 62px 50px 50px 50px 50px 155px
 }
 .sheet-rattack-notes{
     width: 153px;
@@ -304,26 +308,39 @@ button[type=roll].sheet-rangeddice::before {
 .sheet-mental-field{
     max-height:60px;
 }
+.sheet-encumbrance-panel{
+    display:grid;
+    align-items:center;
+    padding-bottom:10px;
+    grid-template-columns: 85px 20px
+}
+.sheet-weight-box{
+    width:83px;
+}
+.sheet-weightsub-box{
+    width:63px;
+}
 .sheet-weapon-grid-container{
     display:grid;
-    grid-template-columns: 213px 62px 62px 62px 47px auto
+    grid-template-columns: 213px 62px 62px 62px 47px 30px auto
 }
 .sheet-weapon-textarea{
-    grid-column: 1 / 6
+    grid-column: 1 / 7
 }
 .sheet-weapon-textarea{
     max-height: 60px;
 }
 .sheet-weapon-inventory-panel, .sheet-armor-inventory-panel, .sheet-gear-inventory-panel, 
 .sheet-consumable-inventory-panel, .sheet-wealth-inventory-panel{
-    max-width:700px;
+    max-width:740px;
+    padding-bottom:10px;
 }
 .sheet-armor-grid-container{
     display:grid;
-    grid-template-columns: 213px 47px 47px 62px 47px auto
+    grid-template-columns: 213px 47px 47px 62px 47px 30px auto
 }
 .sheet-armor-textarea{
-    grid-column: 1 / 6
+    grid-column: 1 / 7
 }
 .sheet-armor-textarea{
     max-height: 60px;
@@ -331,13 +348,16 @@ button[type=roll].sheet-rangeddice::before {
 .sheet-inventory-grid-container{
     display:grid;
     align-items:center;
-    grid-template-columns: 213px 213px 213px auto
+    grid-template-columns: 213px 213px 213px 62px 30px auto
 }
 .sheet-inventory-textarea{
-    grid-column: 1 / 4
+    grid-column: 1 / 6
 }
 .sheet-inventory-textarea{
     max-height: 60px;
+}
+.sheet-counter{
+    width:28px;
 }
 .sheet-occ-skill-panel, .sheet-elective-skill-panel, 
 .sheet-secondary-skill-panel, .sheet-mystic-skill-panel{
