[EP2] Fix for Chrome + Muse

--- a/Eclipse Phase V2/Eclipse Phase V2.css
+++ b/Eclipse Phase V2/Eclipse Phase V2.css
@@ -1559,6 +1559,11 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	margin-left:5px;
 }
 
+.sheet-pool > .sheet-block
+{
+	align-items:flex-end;
+}
+
 .sheet-pool > .sheet-block > label:first-of-type
 {
 	width:71px;
