Trait Wild Die and Boost/Lower Trait
Added the functionality to Boost/Lower Trait and have use a different Wild Die for each Trait.

Additionally, there are some breakfixes included.

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -491,7 +491,7 @@ button[type=roll].sheet-benniesxp {
     transform: rotate(270deg);
     float: left;
     margin-left: -20px;
-    margin-right: 0px;
+    margin-right: 15px;
 }
 
 .sheet-vertLeft {
@@ -499,7 +499,7 @@ button[type=roll].sheet-benniesxp {
     float: right;
     position: relative;
     top: -43px;
-    left: 13px;
+    left: 15px;
 }
 
 .sheet-bigger {
@@ -754,6 +754,21 @@ button[type=roll].sheet-benniesxp {
     text-align: left;
 }
 
+input:not([value="0"]).sheet-deltabutton + .sheet-traitflexattbutton,
+input:not([value="0"]).sheet-deltabutton + .sheet-skillflexattbutton,
+input:not([value="0"]).sheet-deltabutton + .sheet-smallskillflexattbutton,
+input:not([value="0"]).sheet-deltabutton ~ .sheet-otherskill {
+    color: red;
+    font-style: italic;
+}
+
+input:not([value="0"]).sheet-deltabutton + .sheet-traitflexattbutton::after,
+input:not([value="0"]).sheet-deltabutton + .sheet-skillflexattbutton::after,
+input:not([value="0"]).sheet-deltabutton + .sheet-smallskillflexattbutton::after {
+    content: '*';
+    color: red;
+}
+
 .sheet-deriveflexbutton {
 	width: 95%;
 	text-align: left;
@@ -788,6 +803,10 @@ button[type=roll].sheet-benniesxp {
     background-color: transparent;
 }
 
+.sheet-wilddie {
+    text-align: left;
+}
+
 .sheet-traitmod,
 .sheet-otraitmod {
     border: none;
@@ -802,6 +821,22 @@ button[type=roll].sheet-benniesxp {
 
 .sheet-traitmod {
     margin-left: -4px;
+}
+
+hr.sheet-modsection {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.sheet-whispercheck {
+    margin-right: 28px;
+}
+
+.sheet-delta {
+    display: inline-block;
+    width: 230px;
+    font-weight: normal;
+    font-size: .9em;
 }
 
 .sheet-taptable {
@@ -1812,6 +1847,8 @@ input.sheet-armorCarried {
 .sheet-weaponbutton[value="2"] + .sheet-weaponskill,
 .sheet-spellbutton[value="1"] ~ .sheet-spelldamage,
 .sheet-spellbutton[value="0"] ~ .sheet-spelldamage,
+/*.sheet-spellbutton[value="1"] ~ .sheet-vbonusdamage,
+.sheet-spellbutton[value="0"] ~ .sheet-vbonusdamage,*/
 .sheet-spellbutton[value="0"] + .sheet-spellskill,
 .sheet-spellbutton[value="2"] + .sheet-spellskill {
     display: inline-block;
@@ -2735,8 +2772,10 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 
 .sheet-usewealth,
 .sheet-wealthmod,
+.sheet-usewealthmod,
 .sheet-showconsumables,
-.sheet-consumablesmod {
+.sheet-consumablesmod,
+.sheet-showwealthwilddie {
 	display: none;
 }
 
@@ -2747,7 +2786,9 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 }
 
 .sheet-usewealth:checked ~ .sheet-usewealth,
-.sheet-usewealth:not(:checked) ~ .sheet-nonwealth {
+.sheet-usewealth:not(:checked) ~ .sheet-nonwealth,
+.sheet-usewealth:checked + .sheet-showwealthwilddie,
+.sheet-usewealth:checked ~ .sheet-usewealthmod {
 	display: flex;
 }
 
@@ -3491,7 +3532,7 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-srmconfig {
-    height: 125px;
+    height: 140px;
 }
 
 .sheet-injury {
@@ -3661,7 +3702,8 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-vdamage:checked ~ [data-groupname=repeating_weapons] > .repitem > .sheet-weapons > .sheet-weaponconfig .sheet-vbonusdamage,
-.sheet-vdamage:checked ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig .sheet-vbonusdamage {
+.sheet-vdamage:checked ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig .sheet-spellbutton[value="0"] ~ .sheet-vbonusdamage,
+.sheet-vdamage:checked ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig .sheet-spellbutton[value="1"] ~ .sheet-vbonusdamage {
 	display: block;
 }
 /*----------- End Variable Bonus Damage Stuff -----------*/
@@ -4747,5 +4789,4 @@ label.sheet-abmenu:hover {
     padding:0;
     text-decoration: underline;
 }
-
 /*----------- End Roll Template --------------------*/
