--- a/Symbaroum/symbaroum.css
+++ b/Symbaroum/symbaroum.css
@@ -629,6 +629,10 @@ input[name^="attr_friend"] {
 
 /*** Buttons ***/
 /*** Roll Templates ***/
+.sheet-rolltemplate-defense,
+.sheet-rolltemplate-attack, .sheet-rolltemplate-attrib {
+  padding: 1px; }
+
 .sheet-rolltemplate-attack table {
   font-family: "Georgia";
   background-color: #a0a0a0;
