--- a/Symbaroum/symbaroum.scss
+++ b/Symbaroum/symbaroum.scss
@@ -554,10 +554,11 @@ button {
 }
 /*** Roll Templates ***/
 .sheet-rolltemplate-defense,
-.sheet-rolltemplate-attack, .sheet-rolltemplate-attrib{
+.sheet-rolltemplate-attack, .sheet-rolltemplate-attrib {
+	padding: 1px;
 }
 
-.sheet-rolltemplate-attack table{
+.sheet-rolltemplate-attack table {
     font-family: "Georgia";
 	background-color: #a0a0a0;
 	background:url(http://www.designbolts.com/wp-content/uploads/2013/02/Rough-Grey-Tilable-Pattern-For-Website-Background.jpg) top left repeat;
