--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1883,6 +1883,11 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     border: none;
 }
 
+.sheet-rolltemplate-skillRoll .sheet-container hr.sheet-border {
+    margin: 5px 0 5px 0;
+    border-top: 1px solid black;
+}
+
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result {
     width: 100%;
     border: 1px solid;
@@ -2023,6 +2028,11 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     height: 75px;
     font-size: 11px;
     line-height: 14px;
+}
+
+.sheet-damage-type-notes textarea.sheet-defensive-notes {
+    width: 228px;
+    height: 198px;
 }
 
 .sheet-mark-updates-as-read {
