HC SVNT DRACONES Second Edition v1.10: minor sheet fixes, added readme/changelog

--- a/Hc Svnt Dracones Second Edition/hsd2.css
+++ b/Hc Svnt Dracones Second Edition/hsd2.css
@@ -424,13 +424,18 @@ input.sheet-grey{
   height:25px;
 }
 
-.repitem fieldset input[type="text"]{
-  margin-left: 15px;
+.sheet-inv-main .sheet-border {
+  border-style: none solid none none ;
+  border-radius: 0px;
 }
 
-.repitem fieldset input[type="number"]{
-  margin-left: 4px;
-  margin-right: 4px;
+.sheet-inv-main input[type="text"]{
+  padding-left: 10px;
+  width:375px;
+}
+
+div.sheet-inv-main input.sheet-ref {
+  text-align: center;
 }
 
 /* --Active Equipment Effects section -- */
