Redesigned Special Qualities section
Removed legacy design and brought design into line with other sheet elements.

--- a/Maid RPG/maidrpg.css
+++ b/Maid RPG/maidrpg.css
@@ -287,11 +287,17 @@ select {
 .sheet-roots-stress-power-section {
     flex: 3;
 }
+.sheet-specialqualities-box {
+    display: flex;
+}
+.sheet-specialqualities-section {
+    flex: 3;
+}
 
 .sheet-roots-stress-power_description {
     width: calc(100% - 18px);
     resize: none;
-    height: 144px;
+    height: 131.5px;
     border: none;
     margin-top: 5px;
     margin-left: 5px;
