Added credit to CSS

--- a/Maid RPG/maidrpg.css
+++ b/Maid RPG/maidrpg.css
@@ -1,3 +1,7 @@
+/* Maid RPG Character Sheet by Shoujo Q */
+/* Made in October 2019 */
+/* Technical assistance from A.B. and the Roll20 Discord crew */
+
 .sheet-attributes input[type=number] {
     float: center;
     border: none;
