adding fields for coins

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -3006,7 +3006,6 @@ input.sheet-zauber-cb0:checked~.sheet-zauber-filtered,      /* Always display al
 .sheet-glaube-header-36 {
 	grid-column: 1 /1;
   grid-row: 8 /8;
-
 	color: #000;
   text-align: left;
 }
@@ -3088,6 +3087,53 @@ select.sheet-glaube-header { width: 20em;}
 input[type="checkbox"].sheet-glaube-header {
   width: 100%;
   height: 100%;
+}
+
+.sheet-geldbeutel {
+	border-radius: 4px;
+	padding: 2px;
+  vertical-align: middle;
+  margin: 2px;
+	text-align: left;
+}
+
+
+.sheet-geldbeutel-grid {
+	display: grid;
+	grid-gap: 5px;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+  border: 1px solid;
+  border-color: black;
+  margin: 10px;
+  padding: 5px;
+}
+
+.sheet-dukaten {
+	grid-column: 1/1;
+  grid-row: 1/1;
+	color: #000;
+  text-align: left;
+}
+
+.sheet-silbertaler {
+	grid-column: 2/2;
+  grid-row: 1/1;
+	color: #000;
+  text-align: left;
+}
+
+.sheet-heller {
+	grid-column: 3/3;
+  grid-row: 1/1;
+	color: #000;
+  text-align: left;
+}
+
+.sheet-kreuzer {
+	grid-column: 4/4;
+  grid-row: 1/1;
+	color: #000;
+  text-align: left;
 }
 
 
