--- a/CyberpunkRED_Gerdofal/CyberpunkRED.css
+++ b/CyberpunkRED_Gerdofal/CyberpunkRED.css
@@ -1,5 +1,5 @@
 /*
-Updated 9/25/2918 6:24 AM
+Updated 10/10/2019
 */
 
 /* Charsheet standard formatting and sizing */
@@ -88,6 +88,25 @@ Updated 9/25/2918 6:24 AM
 }
 
 .sheet-hidable-gm-switch:not(:checked) ~ .sheet-hidable-gmonlyview {
+    display: none;
+	box-sizing: border-box;	
+}
+
+/* Setup for roll section hide and show */
+.sheet-hidden-checkbox {
+	display: none;
+}
+
+div.sheet-role-netrunner {
+	display: none;
+}
+
+.sheet-role-netrunner-checkbox:checked ~ div.sheet-role-netrunner {
+    display: block;
+	box-sizing: border-box;	
+}
+
+.sheet-role-netrunner-checkbox:not(:checked) ~ div.sheet-role-netrunner {
     display: none;
 	box-sizing: border-box;	
 }
@@ -284,6 +303,48 @@ input[type="radio"]:checked.sheet-luck ~ input[type="radio"].sheet-luck + span::
 
 /* Changes the button icon to a d10 */
 
+button[type="roll"].sheet-invisible-button {
+	background-color: transparent;
+    color: black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    background-image: none;
+    text-shadow: none;
+    box-shadow: none;
+    padding: 0px;
+    margin: 0px;
+    width: auto;
+    font-weight: normal;
+	font-size: 1em;
+    text-align: left;
+	display: inline-block;
+}
+
+button[type="roll"].sheet-invisible-button::before {
+	content: none !important;
+}
+
+button[type="roll"].sheet-invisible-button:hover {
+	color: red;
+	font-weight: normal;
+	background-color: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    background-image: none;
+    text-shadow: none;
+    box-shadow: none;
+    padding: 0px;
+    margin: 0px;
+    width: auto;
+    font-size: 1em;
+    text-align: left;
+	display: inline-block;
+}
+
 button[type="roll"]::before {
 	font-family: 'dicefontd10' !important;
 	content: '0 ' !important;
@@ -364,7 +425,7 @@ span {
 }
 
 .sheet-skillvalue {
-    float: left;
+    float: right;
 	display: inline-block;
 	overflow: hidden;
 	padding: 0px;
@@ -375,7 +436,7 @@ span {
 }
 
 .sheet-skillflag {
-    float: left;
+    float: right;
 	display: inline-block;
 	overflow: hidden;
 	padding: 0px;
